kubernetes/webui.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-frontend
  labels:
    app: webui 
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: webui 
  template:
    metadata:
      labels:
        app: webui 
    spec:
      containers:
        - name: webui
          image: ghcr.io/open-webui/open-webui:main
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "2Gi"
              cpu: "1500m"
