kubernetes/ollama.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ollama-backend
spec:
  type: ClusterIP
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434
