kubernetes/webui.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webui-frontend
spec:
  type: ClusterIP
  selector:
    app: webui
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
